fixed header spacing

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,13 +3,19 @@
 }
 
 .Header {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around;
-  padding: 0 15px;
   width: 100%;
   background: linear-gradient(to bottom right, #1f4063, #1f2443);
   color: white;
+  padding: 0 15px;
+}
+
+.header-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  
+  max-width: 1100px;
+  margin: auto;
 }
 
 .hero {
